--- a/style.css
+++ b/style.css
@@ -1,24 +1,49 @@
-table,td,tr {
-    border: 1px solid;
+html,body {
+    height:100%;
+}
+span {
+    padding-top: 45%;
+    display: inline-block;
+    vertical-align: middle;
 
 }
-td {
-    width: 180px;
-    height:180px;
-}
-#board_tbl {
-    width: 600px;
+.table {
+    display: table;
     height: 600px;
+    width: 600px;
+    table-layout: fixed;
+    position: relative;
+}
+.row {
+    display: table-row;
+    height: 33%;
+    width: 100%;
+}
+.cell {
+    display: table-cell;
+    border: 1px solid;
+    height: 33%;
+    width: 33%;
 }
 .card {
-    border: 1px solid;
-    width: 150px;
-    height:150px;
     text-align: center;
-    padding-top: 80px;
+    vertical-align: middle;
     font-size: 30px;
     background-color: cornflowerblue;
+    width: 90%;
+    height: 90%;
+    margin: 5%;
 }
 .open-card {
-
+    border: 3px solid;
+    border-color: aquamarine;
+}
+.end-message {
+    position:absolute;
+    top: 100px;
+    left: 100px;
+    width: 400px;
+    height: 400px;
+    background-color: lemonchiffon;
+    border: 1px solid;
 }
